fix visible line with overflow hidden, add button to end of stories section

--- a/src/sass/components/_story.scss
+++ b/src/sass/components/_story.scss
@@ -28,6 +28,7 @@
 
   &__text {
     transform: skewX(12deg);
+    min-height: 15rem;
   }
 
   &__caption {
